400e说明样式优化

--- a/zh-CN/1.learn-more-about-oceanbase/3.compatibility-with-oracle/3.built-in-functions.md
+++ b/zh-CN/1.learn-more-about-oceanbase/3.compatibility-with-oracle/3.built-in-functions.md
@@ -201,9 +201,10 @@ Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 
 | 27 | VARIANCE \*                  | 支持                |
 | 28 | WMSYS.WM_CONCAT/WM_CONCAT \* | 支持                |
 
->**说明**
->
->\* 表示该函数既是聚合函数又是分析函数。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 表示该函数既是聚合函数又是分析函数。</p>
+</main>
 
 ## 分析函数
 
@@ -218,6 +219,7 @@ Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 
 | 7  | RATIO_TO_REPORT | 支持                |
 | 8  | ROW_NUMBER      | 支持                |
 
->**说明**
->
->聚合函数表格中标 \* 函数也同时属于分析函数，故未在此表格重复列出。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>聚合函数表格中标 \* 函数也同时属于分析函数，故未在此表格重复列出。</p>
+</main>
