--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/1.before-you-start.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/1.before-you-start.md
@@ -51,10 +51,10 @@ Query OK, 0 rows affected
    2 rows in set
    ```
 
-   > **说明**
-   >
-   > * `sys_unit_config` 是管控租户的参数，一般不做修改。
-   > * 本示例中租户 `test` 的 `unit_config name` 为 `test_unit`。
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p> <ul><li><code>sys_unit_config</code>  是管控租户的参数，一般不做修改。</li><li>本示例中租户 <code>test</code>  的 <code>unit_config name</code>  为 <code>test_unit</code> 。</li></ul> </p>
+   </main>
 
 2. 复制租户的 `unit_config name`，使用如下命令，完成内存扩容。
 
@@ -119,9 +119,10 @@ OceanBase 数据库提供了以下超时时间相关的变量，可使用 `SHOW 
 
 * 在 SQL 级别添加 Hint 设置。示例如下：
 
-   >**说明**
-   >
-   >此方式只对当前 SQL 语句生效。
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>此方式只对当前 SQL 语句生效。 </p>
+   </main>
 
    ```sql
    SELECT /*+query_timeout(100000000)  */  c1 FROM t1; 
