--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode.md/2.java-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode.md/2.java-application-of-oracle-model.md
@@ -45,9 +45,10 @@ mv ./oceanbase-client-{version}.jar /usr/share/java
 export CLASSPATH=/usr/share/java/oceanbase-client-{version}.jar:$CLASSPATH
 ```
 
->**说明**
->
->根据下载的实际文件版本进行相应操作。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 根据下载的实际文件版本进行相应操作。 </p>
+</main>
 
 ### 步骤三：编写应用程序
 
