--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/5.experience-ddl/1.experience-ddl-of-mysql-mode.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/5.experience-ddl/1.experience-ddl-of-mysql-mode.md
@@ -492,9 +492,10 @@ OceanBase 数据库 MySQL 模式下修改表的字符序和字符集的语法如
 ALTER TABLE table_name CHARACTER SET = charset_name COLLATE =collate_name;
 ```
 
->**说明**
->
->此语法只修改表所在的 Schema 上的字符序和字符集，只对之后新增加的表起作用。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>此语法只修改表所在的 Schema 上的字符序和字符集，只对之后新增加的表起作用。</p>
+</main>
 
 示例如下：
 
@@ -543,9 +544,10 @@ OceanBase 数据库 MySQL 模式下修改表中已有数据的字符集和字符
 ALTER TABLE table_name CONVERT TO CHARACTER SET charset_name COLLATE collate_name;
 ```
 
->**说明**
->
->此语法不仅修改了表上已有数据的字符集和字符序，也会修改表所在的 Schema 上的字符序和字符集。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>此语法不仅修改了表上已有数据的字符集和字符序，也会修改表所在的 Schema 上的字符序和字符集。 </p>
+</main>
 
 示例如下：
 
