--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/6.experience-full-link-diagnosis.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/6.experience-full-link-diagnosis.md
@@ -49,9 +49,10 @@ DBMS_MONITOR.OB_SESSION_TRACE_ENABLE(
     record_policy   IN VARCHAR2);
  ```
 
->**说明**
->
->如果 `session_id` 为 `NULL`，表示当前 Session。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 如果 `session_id` 为 `NULL`，表示当前 Session。</p>
+</main>
 
 示例：记录当前 Session 相关耗时等信息，采样频率为 50%，并且只记录 Slow Query。
 
@@ -65,9 +66,10 @@ CALL DBMS_MONITOR.OB_SESSION_TRACE_ENABLE(null,1,0.5,'ONLY_SLOW_QUERY');
 DBMS_MONITOR.OB_SESSION_TRACE_DISABLE(session_id  IN  BINARY_INTEGER);
 ```
 
->**说明**
->
->如果 `session_id` 为 `NULL`，表示当前 Session。
+><main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 如果 <code>session_id</code> 为 <code>NULL</code>，表示当前 Session。 </p>
+</main>
 
 示例：关闭当前 Session 的 Trace。
 
@@ -195,9 +197,10 @@ CALL DBMS_MONITOR.OB_TENANT_TRACE_ENABLE(1, 1, 'ALL');
 DBMS_MONITOR.OB_TENANT_TRACE_DISABLE(tenant_name IN VARCHAR2 DEFAULT NULL);
 ```
 
->**说明**
->
->系统租户可以关闭任意租户的 Trace；普通租户只能关闭本租户的 Trace。
+><main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>系统租户可以关闭任意租户的 Trace；普通租户只能关闭本租户的 Trace。 </p>
+</main>
 
 示例 1：关闭租户名为 `ORACLE` 的 Trace。
 
