--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md
@@ -62,9 +62,10 @@
 
   OceanBase Connector/C 也称为 libobclient，用于应用程序作为独立的服务器进程通过网络连接与数据库服务器 OBServer 进行通信。客户端程序在编译时会引用 C API 头文件，同时可以连接到 C API 库文件。
 
-  >**说明**
-  >
-  >libobclient 生成的 so 文件为 `libobclient.so`（对应 MySQL 的 `libmysqlclient.so`），OceanBase 数据库安装后的命令行工具是 OBClient（对应 MySQL 的命令行工具）。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>libobclient 生成的 so 文件为 <code>libobclient.so</code>（对应 MySQL 的 <code>libmysqlclient.so</code>），OceanBase 数据库安装后的命令行工具是 OBClient（对应 MySQL 的命令行工具）。 </p>
+  </main>
 
   使用 C 应用程序连接 OceanBase 数据库的具体操作示例请参见 [创建 C 示例应用程序](../../../2.quickstart/3.create-sample-application-of-mysql-mode.md/3.c-application-of-mysql-model.md)。
 
