--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -6,19 +6,21 @@
 
 在 OceanBase 数据库的 MySQL 模式中，数据库（Database） 是数据库对象的集合。连接到数据库后，MySQL 租户可以创建自己的数据库，存储并管理自己的数据。
 
->**说明**
->
->OceanBase 数据库的 Oracle 模式使用 Schema 来表示一个用户所拥有的数据库对象的集合，并且每个用户在被创建时就会拥有一个缺省的 Schema，其 Schema 名就等于用户名。与 MySQL 租户不同，Oracle 租户连接到数据库后，不需要再创建 schema，即可存储并管理自己的数据。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>OceanBase 数据库的 Oracle 模式使用 Schema 来表示一个用户所拥有的数据库对象的集合，并且每个用户在被创建时就会拥有一个缺省的 Schema，其 Schema 名就等于用户名。与 MySQL 租户不同，Oracle 租户连接到数据库后，不需要再创建 schema，即可存储并管理自己的数据。 </p>
+</main>
 
 ## 数据库创建准备
 
 在创建数据库前，您需要确认以下事项：
 
 * 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
-  
-  >**说明**
-  >
-  >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
+
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
+  </main>
 
 * 请确认您已拥有 `CREATE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
