--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data-of-mysql-mode.md
@@ -8,9 +8,10 @@
 
 * 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
-  >**说明**
-  >
-  >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
+  <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
+  </main>
 
 * 请确认您已拥有待操作的表的 `INSERT` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
@@ -190,11 +191,10 @@ ERROR 1062 (23000): Duplicate entry '3' for key 'PRIMARY'
 
 * 通过 [`INSERT INTO ON DUPLICATE KEY UPDATE`](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/2.string-functions-of-mysql-mode/14.insert-of-mysql-mode.md) 语句避免约束冲突时，可以指定对重复主键或唯一键的后续处理。
 
-  >**说明**
-  >
-  >* 指定 `ON DUPLICATE KEY UPDATE column_name = expr`：当要插入的主键或唯一键有重复时，可以使用 `column_name = expr` 赋值语句来更新表中冲突行的数据。`column_name = expr` 赋值语句可以为冲突行赋某一列或几列的值。赋多列值时，列与列之间用逗号分隔。
-  >
-  >* 不指定 `ON DUPLICATE KEY UPDATE column_name = expr`：当要插入的主键或唯一键有重复时，插入数据时，系统会报错。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p><ul><li>指定  <code>ON DUPLICATE KEY UPDATE column_name = expr </code>：当要插入的主键或唯一键有重复时，可以使用  <code>column_name = expr </code> 赋值语句来更新表中冲突行的数据。 <code>column_name = expr </code> 赋值语句可以为冲突行赋某一列或几列的值。赋多列值时，列与列之间用逗号分隔。</li><li>不指定  <code>ON DUPLICATE KEY UPDATE column_name = expr </code>：当要插入的主键或唯一键有重复时，插入数据时，系统会报错。</li></ul></p>
+  </main>
 
   ```sql
   obclient [test]> INSERT INTO t_insert(id, name, value) VALUES (3,'UK', 10003),(5, 'CN', 10005) ON DUPLICATE KEY UPDATE name = VALUES(name);
