--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data-of-mysql-mode.md
@@ -8,9 +8,10 @@
 
 * 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
-  >**说明**
-  >
-  >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
+  <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
+  </main>
 
 * 请确认您已拥有待操作的表的 `INSERT`、`UPDATE` 和 `DELETE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
@@ -34,10 +35,10 @@ REPLACE INTO table_name VALUES(list_of_values);
 * 如果没有主键或唯一键冲突，则插入记录。
 
 * 如果存在主键或唯一键冲突，则先删除已有记录，再插入新行记录。
-
-  > **说明**
-  >
-  > 目标表建议有主键或者唯一索引，否则容易插入重复的记录。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>目标表建议有主键或者唯一索引，否则容易插入重复的记录。</p>
+  </main>
 
 ### 表中无数据记录或者有数据记录但无主键、无唯一键冲突
 
