--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
@@ -18,9 +18,10 @@ Hint 在语句注释中的语法格式如下：
 
 * `READ_CONSISTENCY` Hint 弱一致性读，指定某条 SQL 所读取的表模式为弱一致性（指定参数 `WEAK`）或强一致性（指定参数 `STRONG`），指引 SQL 读取相关表的分区的备副本。
 
-   >**说明**
-   >
-   >`READ_CONSISTENCY` Hint 仅仅是使当前查询可以进行弱一致性读，完全的读写分离还是要有路由等的支持。OceanBase 数据库的读写分离功能依赖 OBProxy 的 LDC 功能，如果需要使用读写分离功能，建议先进行 LDC 配置。有关读写分离的详细信息，请参见 [读写分离](../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md)。
+    <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p> <code>READ_CONSISTENCY</code> Hint 仅仅是使当前查询可以进行弱一致性读，完全的读写分离还是要有路由等的支持。OceanBase 数据库的读写分离功能依赖 OBProxy 的 LDC 功能，如果需要使用读写分离功能，建议先进行 LDC 配置。有关读写分离的详细信息，请参见 <a href="../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md">读写分离</a> 。  </p>
+    </main>
 
 * `INDEX` Hint 指示优化器对指定的表使用索引扫描。
 
@@ -36,10 +37,10 @@ SQL Hint 通常用在 SQL 语句里，并不限于查询 SQL。这里以查询 S
 SELECT /*+ hint_text [, hint_text] */ select_items FROM table_name;
 ```
 
-> **说明**
->
-> * 多个 SQL Hint 可以叠加使用，注意功能不要冲突。
-> * 在 `obclient` 命令行环境下，默认会忽略注释语法，导致 SQL Hint 不起作用，所以启动 `obclient` 时需要增加参数"-c"。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p><ul><li>多个 SQL Hint 可以叠加使用，注意功能不要冲突。</li><li>在 <code>obclient</code> 命令行环境下，默认会忽略注释语法，导致 SQL Hint 不起作用，所以启动 <code>obclient</code> 时需要增加参数"-c"。</li></ul> </p>
+</main>
 
 ### 指定 SQL 所读取的表模式为弱一致性
 
