--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/5.query-by-group-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/5.query-by-group-of-mysql-mode.md
@@ -138,9 +138,10 @@ obclient> SELECT user_id 客户ID, COUNT(order_id) 下单数量 FROM fruit_order
 1 row in set
 ```
 
-> **说明**
->
-> 当查询中包含 `HAVING` 时，先获得不含 `HAVING` 子句时的 SQL 查询结果，然后在这个结果的基础上使用 `HAVING` 条件筛选出符合的数据，最后返回这些数据。由此，`HAVING` 后是可以使用聚合函数，并且这个聚集函数不必与 `SELECT` 后面的聚集函数相同。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>当查询中包含 <code>HAVING</code> 时，先获得不含 <code>HAVING</code> 子句时的 SQL 查询结果，然后在这个结果的基础上使用 <code>HAVING</code> 条件筛选出符合的数据，最后返回这些数据。由此，<code>HAVING</code> 后是可以使用聚合函数，并且这个聚集函数不必与 <code>SELECT</code> 后面的聚集函数相同。 </p>
+</main>
 
 ### 分组后排序
 
