--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/6.use-type-conversion-functions-in-queries-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/6.use-type-conversion-functions-in-queries-of-mysql-mode.md
@@ -31,9 +31,10 @@ t6: 2020-02-02 14:30:45
 1 row in set 
 ```
 
-> **说明**
->
-> 使用函数 `DATE_FORMAT` 可以将时间类型转换为字符串类型。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>使用函数 <code>DATE_FORMAT</code> 可以将时间类型转换为字符串类型。</p>
+</main>
 
 ### 数值类型和字符串类型互相转换
 
