--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
@@ -28,9 +28,10 @@ ERROR 1045 (42000): Access denied for user 'ny1'@'xxx.xxx.xxx.xxx' (using passwo
 
 1. 使用管理员用户登录到相应的租户。使用管理员用户登录到相应的租户。
 
-   >**说明**
-   >
-   >修改用户密码的操作一般由管理员完成，普通用户如果需要修改其他用户的密码，必须具备全局 `CREATE USER` 权限。
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p> 修改用户密码的操作一般由管理员完成，普通用户如果需要修改其他用户的密码，必须具备全局 <code>CREATE USER</code> 权限。 </p>
+   </main>
 
 2. 修改用户 `ny1` 的密码。
 
