--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/8.unique-key-conflict-with-error-code-1062-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/8.unique-key-conflict-with-error-code-1062-of-mysql-mode.md
@@ -75,11 +75,10 @@ ERROR 1062 (23000): Duplicate entry '3' for key 'PRIMARY'
 
 **方法二**：通过 `INSERT INTO ON DUPLICATE KEY UPDATE` 避免约束冲突，可以指定对重复主键或唯一键的后续处理，以下示例对冲突行内容进行了更新。
 
-  >**说明**
-  >
-  >* 指定 `ON DUPLICATE KEY UPDATE column_name = expr`：当要插入的主键或唯一键有重复值时，可以使用 `column_name = expr` 赋值语句来更新表中冲突行的数据。`column_name = expr` 赋值语句可以为冲突行赋某一列或几列的值。赋多列值时，列与列之间用逗号分隔。
-  >
-  >* 不指定 `ON DUPLICATE KEY UPDATE column_name = expr`：当要插入的主键或唯一键有重复值时，系统会报错。
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p><ul><li>指定 <code>ON DUPLICATE KEY UPDATE column_name = expr</code>：当要插入的主键或唯一键有重复值时，可以使用 <code>column_name = expr</code> 赋值语句来更新表中冲突行的数据。<code>column_name = expr</code> 赋值语句可以为冲突行赋某一列或几列的值。赋多列值时，列与列之间用逗号分隔。</li><li>不指定 <code>ON DUPLICATE KEY UPDATE column_name = expr</code>：当要插入的主键或唯一键有重复值时，系统会报错。</li></ul>  </p>
+   </main>
 
 1. 在 `t_insert` 表插入数据时通过 `INSERT INTO ON DUPLICATE KEY UPDATE` 避免约束冲突。
 
