--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
@@ -8,9 +8,10 @@
 
 * 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
-  >**说明**
-  >
-  >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
+  <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
+  </main>
 
 * 请确认您已拥有待操作表的 `INSERT` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
@@ -155,10 +156,10 @@ obclient [SYS]> SELECT * FROM t_insert_bak;
 
 在批处理任务中，可能需要对目标表进行大量的 `INSERT` 操作。当待插入的数据在表记录中不存在时，也可以使用 `MERGE INTO` 语句将源表的记录插入到目标表中，具体操作及示例请参见 [替换数据](4.replace-data-of-oracle-mode.md)。
 
->**说明**
->
->在使用 `INSERT` 语句插入数据时，如果表上有唯一性约束，则在插入相同的记录时，系统会报错，您可以通过 `MERGE INTO` 语句来更新表记录，避免唯一性约束的冲突。
-
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 在使用 <code>INSERT<code> 语句插入数据时，如果表上有唯一性约束，则在插入相同的记录时，系统会报错，您可以通过 `MERGE INTO` 语句来更新表记录，避免唯一性约束的冲突。  </p>
+</main>
 
 ## 相关文档
 
