--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
@@ -8,9 +8,10 @@
 
 * 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
-  >**说明**
-  >
-  >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
+  <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
+  </main>
 
 * 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
@@ -29,9 +30,10 @@ DELETE FROM table_name [ WHERE condition ];
 | table_name              | 是      | 指定需要删除数据的表                                         |
 | \[ WHERE condition \]   | 否      | 条件子句指定要删除的数据必须满足的条件，如果没有提供就全表删除。 |
 
-> **说明**
->
-> 如果表记录数多达几百万以上，会形成大事务，可能会有性能问题。建议带上 `WHERE` 条件分批删除，或者使用 `TRUNCATE TABLE` 语句。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 如果表记录数多达几百万以上，会形成大事务，可能会有性能问题。建议带上 <code>WHERE</code> 条件分批删除，或者使用 <code>TRUNCATE TABLE</code> 语句。  </p>
+</main>
 
 ### 删除部分数据
 
