--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/3.condition-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/3.condition-query-of-oracle-mode.md
@@ -116,9 +116,10 @@ SELECT column_name [,column_name...] FROM table_name WHERE column_name < const_v
 SELECT column_name [,column_name...] FROM table_name WHERE column_name > const_value;
 ```
 
-> **说明**
->
-> 大于等于（\>=）和小于等于（\<=）与之类似。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 大于等于（\>=）和小于等于（\<=）与之类似。 </p>
+</main>
 
 示例如下：
 
