--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/2.experience-operational-olap.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/2.experience-operational-olap.md
@@ -125,11 +125,11 @@ mv *.tbl tpch100
 
 ### 生成查询 SQL
 
-> **说明**
->  
-> 您可参考本节中的下述步骤生成查询 SQL 后进行调整，也可直接使用 [GitHub](https://github.com/oceanbase/obdeploy/tree/master/plugins/tpch/3.1.0/queries) 中给出的查询 SQL。
->  
-> 若您选择使用 GitHub 中的查询 SQL，您需将 SQL 语句中的 `cpu_num` 修改为实际并发数。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 您可参考本节中的下述步骤生成查询 SQL 后进行调整，也可直接使用 [GitHub](https://github.com/oceanbase/obdeploy/tree/master/plugins/tpch/3.1.0/queries) 中给出的查询 SQL。 </p>
+  <p>若您选择使用 GitHub 中的查询 SQL，您需将 SQL 语句中的 <code>cpu_num</code>修改为实际并发数。</p>
+</main>
 
 1. 复制 `qgen` 和 `dists.dss` 文件至 `queries` 目录。
 
@@ -421,9 +421,10 @@ use $db_name;
    +---------------------+-------+
    ```
 
-   > **说明**
-   >
-   > `frozen_version` 和所有 Zone 的 `last_merged_version` 的值相等即表示合并完成。
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p> <code>frozen_version</code> 和所有 Zone 的 <code>last_merged_version</code> 的值相等即表示合并完成。  </p>
+   </main>
 
 ### 执行测试
 
