--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
@@ -20,9 +20,10 @@
 
 * 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
-  >**说明**
-  >
-  >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
+  </main>
 
 * 请确认您已拥有 CREATE 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
@@ -246,9 +247,10 @@ Query OK, 1 row affected
 
 自增列创建后，如果使用 `INSERT` 语句插入数据时指定了自增列的值，且系统变量 `SQL_MODE` 未设置为 `NO_AUTO_VALUE_ON_ZERO` ，如果指定的值为 `0`，则系统会使用自增列的下一个值填充列的值；如果指定的值比当前最大值小，则不影响自增列的下一个值的计算；如果指定的值比当前值最大值大，则自增列会将本次插入值与自增列缓存值的和作为下次自增的起始值。
 
->**说明**
->
->如果系统变量 `SQL_MODE` 的值为 `NO_AUTO_VALUE_ON_ZERO` ，则表示不要在插入值为零的列中生成 `AUTO_INCREMENT`。
+<main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>如果系统变量 <code>SQL_MODE</code> 的值为 <code>NO_AUTO_VALUE_ON_ZERO</code> ，则表示不要在插入值为零的列中生成 <code>AUTO_INCREMENT</code>。  </p>
+  </main>
 
 示例 7：创建一个含自增列的表。
 
