--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
@@ -121,10 +121,10 @@ obclient> SELECT empname, deptno FROM emp WHERE deptno != 30;
 SELECT column_name [,column_name...] FROM table_name WHERE column_name < const_value;
 SELECT column_name [,column_name...] FROM table_name WHERE column_name > const_value;
 ```
-
-> **说明**
->
-> 大于等于（\>=）和小于等于（\<=）与之类似。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>大于等于（\>=）和小于等于（\<=）与之类似。 </p>
+</main>
 
 示例：
 
