--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md
@@ -30,9 +30,10 @@
 
 * 通过 `SET GLOBAL autocommit` 设置租户级别的变量时，需要断开链接才生效。
 
-> **说明**
->
-> 如果当前 Session 的 `autocommit` 值为 `0` ，并且没有显式的提交事务，程序异常中断时，OceanBase 数据库会自动回滚最后一个未提交的事务。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>如果当前 Session 的 <code>autocommit</code> 值为 <code>0</code> ，并且没有显式的提交事务，程序异常中断时，OceanBase 数据库会自动回滚最后一个未提交的事务。</p>
+  </main>
 
 ## 相关文档
 
