--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/3.connect-to-the-oceanbase-database-through-odc-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/3.connect-to-the-oceanbase-database-through-odc-of-oracle-mode.md
@@ -14,9 +14,10 @@ ODC 支持连接 OceanBase 数据库的 Oracle 租户。本文主要介绍该连
 
    ![创建 1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/odc/400/OBServer%20create%20connection-Oracle.png)
 
-   > **说明**
-   >
-   > ODC 第一次运行时，加载时间会比较长，请耐心等待。
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p> ODC 第一次运行时，加载时间会比较长，请耐心等待。 </p>
+   </main>
 
 2. 在创建连接页签需填写或选择以下信息，如已拥有 OceanBase 数据库连接串，则以下信息均可从连接串中直接获取（mysql -h **主机名** -P **端口号** -u **数据库用户名@租户名** # **集群名** -D **默认数据库** -p ' **数据库密码** '）或直接使用页签中提供的智能解析工具进行填充：
 
@@ -36,9 +37,11 @@ ODC 支持连接 OceanBase 数据库的 Oracle 租户。本文主要介绍该连
    | sys 租户账号设置 | 选择是否使用 `sys` 租户账号查询租户视图，勾选后输入 **账号** 和 **密码**。<br> 数据库类型为物理库时，请输入拥有查询 `sys` 租户视图权限的账号和密码，当 **连接地址** 中已指定 **租户** 为 `sys` 时，该项被自动填充。<ul><li> **账户** ：拥有 `sys` 租户视图查看权限的账号。</li><li> **密码** ：账号对应的密码。</li></ul>    输入账户和密码信息后，单击密码框后的 **测试连接** 按钮测试账户信息是否正确。<blockquote> **说明** <ul><li> 自 ODC V2.3.0 之后版本，导入导出功能需在创建连接的高级配置中设置 root@sys 用户。</li><li> 自 ODC V2.4.1 之后版本，导入导出功能查询视图信息时取消 `root@sys` 账号强依赖（如果未配置 `root@sys` 账号，ODC 部分对象例如存储过程和函数等不支持导出功能；如果配置了 `root@sys` 账号，可通过访问 `sys` 租户下的视图信息得到最优的数据路由策略，可提升导出速度）。</li><li>  **sys 租户账号和密码** 为集群租户下用户的账号和密码 (账号请勿填入“@sys#集群”)。例如：账号为 `root`。 </li></ul></blockquote>    |
 
 3. 单击页面下方的 **保存** 按钮，即可将当前的配置信息持久保存在 ODC 连接列表中。再次登录 ODC 时，可在连接配置列表中直接选择该连接，保存连接配置时不要求测试连接一定成功。
-   > **说明**  
-   >
-   > 保存前，可以单击 **测试连接** 进行数据库连接测试，如果数据库用户名和密码正确，则会提示 **连接成功**。
+
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p> 保存前，可以单击 <b>测试连接</b> 进行数据库连接测试，如果数据库用户名和密码正确，则会提示 <b>连接成功</b>。 </p>
+   </main>
 
 ## 相关文档
 
