--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.view-cluster-parameters.md
@@ -1,12 +1,6 @@
 # 查看集群配置项
 
-您可以通过配置文件或 SQL 语句来查看集群配置项的信息。
-
-## 背景信息
-
 系统租户和用户租户均可以查看集群配置项。
-
-## 操作步骤
 
 查看集群配置项主要有以下几种方式：
 
@@ -16,7 +10,7 @@
 
 * 通过 `GV$OB_PARAMETERS` 视图查看集群配置项
 
-### 通过配置文件 observer.config.bin 查看集群配置项
+## 通过配置文件 observer.config.bin 查看集群配置项
 
 在启动 observer 进程时，如果您没有指定集群配置项，待 observer 进程启动后，系统就会使用其指定的配置项的 Default 值。在 observer 进程启动成功后，配置项值将持久化到 `/home/admin/oceanbase/etc/observer.config.bin` 文件中，您可以查看文件中的集群配置项。
 
@@ -36,7 +30,7 @@
    [admin@xxx etc]$ strings observer.config.bin
    ```
 
-### 通过 SHOW 语句查看集群配置项
+## 通过 SHOW 语句查看集群配置项
 
 系统租户（即 `sys` 租户）和用户租户均可以通过 SHOW 语句查看集群级配置项的值。
 
@@ -89,7 +83,7 @@
    | source     | 当前值来源： <ul><li>`TENANT`</li> <li>`CLUSTER` </li>  <li>`CMDLINE`</li> <li>`OBADMIN` </li>  <li>`FILE`</li> <li>`DEFAULT`</li></ul>           |
    | edit_level | 定义该配置项的修改行为： <ul><li>`READONLY`：表示该参数不可修改。</li> <li>`STATIC_EFFECTIVE`：表示该参数可修改但需要重启 OBServer 才会生效。</li>   <li>`DYNAMIC_EFFECTIVE`：表示该参数可修改且修改后动态生效。</li></ul>          |
 
-### 通过 GV$OB_PARAMETERS 视图查看集群配置项
+## 通过 GV$OB_PARAMETERS 视图查看集群配置项
 
 1. 系统租户或用户租户登录到数据库。
 
@@ -140,4 +134,6 @@
 
 ## 相关文档
 
-更多集群配置项的运维操作，请参见 [修改集群配置项](12.modify-cluster-parameters.md)。
+您也可以根据业务需要修改集群配置项的值，有关详细的操作，请参见 [修改集群配置项](12.modify-cluster-parameters.md)。
+
+有关每个集群配置项的详细介绍，参见 《参考指南》 的 **系统参考** 章节。
