--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.delete-a-zone.md
@@ -28,7 +28,7 @@
 
    其中，`zone_name` 表示待删除的 Zone 的名称。每条语句每次仅支持删除一个 Zone。如果需要删除多个 Zone，则需要重复执行该语句。
 
-   删除进群中的 `zone4` 的示例如下：
+   删除集群中的 `zone4` 的示例如下：
 
    ```sql
    obclient [(none)]> ALTER SYSTEM DELETE ZONE zone4;
