--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -64,7 +64,7 @@
       obclient [(none)]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882'; 
       ```
 
-      成功执行后，可以对节点做任何运维操作，可以直接执行 kill observer 进程操作，对业务流量无任何影响。
+      成功执行后，可以对节点做任何运维操作，可以直接执行第 3 步 kill observer 进程操作，对业务流量无任何影响。
       
       若无法执行成功，请尝试执行 Force Stop Server 操作。
 
@@ -82,7 +82,7 @@
       obclient [(none)]> ALTER SYSTEM FORCE STOP SERVER 'xx.xx.xx.10:2882'; 
       ```
 
-      成功执行后可以对节点做任何运维操作，可以直接 kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Isolate Server 操作。
+      成功执行后可以对节点做任何运维操作，可以直接执行第 3 步 Kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Isolate Server 操作。
 
    3. 对问题节点执行 Isolate Server 操作。
 
@@ -98,19 +98,13 @@
       obclient [(none)]> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.10:2882'; 
       ```
 
-      成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能直接 Kill observer 进程。如果 Kill observer 进程，可能有如下问题：
+      成功执行 Isolate Server 操作 后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
 
       * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
 
       * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
 
-3. 使用 `kill -9 pid` 命令 Kill observer 进程。
-
-   本操作务必要谨慎，可能会产生如下严重影响：
-
-   * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
-
-   * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
+3. （可选）使用 `kill -9 pid` 命令 Kill observer 进程。
 
    具体操作如下：
 
