--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.modify-cluster-parameters.md
@@ -2,17 +2,10 @@
 
 通过修改集群配置项，可以使 OceanBase 数据库的行为符合业务的要求。OceanBase 数据库的集群配置项即集群参数，同时参数还分为动态生效和重启生效两类。通过集群配置项的设置可以控制集群的负载均衡、合并时间、合并方式、资源分配和模块开关等功能。
 
-## 注意事项
-
-* 系统租户（即 `sys` 租户）可以查看和设置集群配置项，用户租户只能查看集群配置项，无法设置集群配置项。
-
-* 集群级别的配置项不能通过用户租户设置，也不可以通过系统租户（即 `sys` 租户） 指定为用户租户设置。
-   
-   例如，执行 `ALTER SYSTEM SET memory_limit='100G' TENANT='test_tenant'` 语句将导致报错，因为 `memory_limit` 是集群级别的配置项。确认一个配置项为集群级别还是租户级别，可根据 `SHOW PARAMETERS LIKE 'parameter_name';` 语句执行结果中的 `scope` 列对应的值来判断：
-
-    * `scope` 值为 `CLUSTER` 则表示为集群级别的配置项。
-
-    * `scope` 值为 `TENANT `则表示为租户级别的配置项。
+<main id="notice" type='notice'>
+            <h4>注意</h4>
+            <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群配置项，用户租户只能查看集群配置项，无法设置集群配置项。</p>
+          </main>
 
 
 ## 操作步骤
@@ -69,6 +62,14 @@
      * `BOTH`：表示既修改配置表，又修改内存值，修改后立即生效，且 OBServer 重启以后配置值仍然生效。
 
    * `SERVER` 表示指定集群中要修改的 Server，`ZONE` 表示指定集群中要修改的 Zone。`ALTER SYSTEM` 语句不能同时指定 Zone 和 Server。并且在指定 Zone 时，仅支持指定一个 Zone；指定 Server 时，仅支持指定一个 Server。如果修改集群级配置项时，不指定 Zone 也不指定 Server，则表示该修改在整个集群内生效。
+
+   在修改集群配置项时，集群级别的配置项不能通过用户租户设置，也不可以通过系统租户（即 `sys` 租户） 指定为用户租户设置。
+   
+   例如，执行 `ALTER SYSTEM SET memory_limit='100G' TENANT='test_tenant'` 语句将导致报错，因为 `memory_limit` 是集群级别的配置项。确认一个配置项为集群级别还是租户级别，可根据 `SHOW PARAMETERS LIKE 'parameter_name';` 语句执行结果中的 `scope` 列对应的值来判断：
+
+    * `scope` 值为 `CLUSTER` 则表示为集群级别的配置项。
+
+    * `scope` 值为 `TENANT `则表示为租户级别的配置项。
 
     示例：
 
