--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.add-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.add-a-zone.md
@@ -60,7 +60,7 @@
 
 ## 后续操作
 
-增加 Zone 后，如果需要进一步在集群中使用该 Zone，还需要在 Zone 上添加 OBServer，添加 OBServer 的具体操作请参见 [增加节点](4.add-a-node.md)。
+增加 Zone 后，如果需要进一步在集群中使用该 Zone，还需要在该 Zone 上添加 OBServer，重新分配资源，并增加副本信息，以便达到扩容的目的。
 
 ## 相关文档
 
