400e max_allowed_packet 参数优化

--- a/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/37.max_allowed_packet-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/37.max_allowed_packet-of-mysql-mode.md
@@ -9,4 +9,4 @@
 | 取值范围    | \[1024,1073741824\]                                                                                                |
 | 生效范围    | <li> Global   <li> Session            |
 | 是否参与序列化 | 是                                                                                                                  |
-| 是否可修改   | 该变量可通过 `SET GLOBAL` 语句修改 Global 生效方式下的取值，不可通过 `ALTER SESSION SET` 语句修改 Session 生效方式下的取值。使用时，客户端与 Server 端一般均需要调整。 |
+| 是否可修改   | 该变量可通过 `SET GLOBAL` 语句修改 Global 生效方式下的取值，不可通过 `SET SESSION` 语句修改 Session 生效方式下的取值。<br>Session 值仅支持查看，且 Session 值只能与 Global 值相同。<br>使用时，客户端与 Server 端一般均需要调整。 |
