--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
@@ -23,7 +23,13 @@ replicas{量词}@location
 下述示例展示了在一个拥有五个 Zone（z1~z5）的 OceanBase 集群中，可以容纳不同 Locality 的多个租户和它们的 Locality 情况：
 
 * sys tenant 的 Locality： F@z1,F@z2,F@z3,F@z4,F@z5 。
+  
+  表示系统租户在 `z1,z2,z3,z4,z5` 上各存在一个全能型副本。
 
 * tenant1 的 Locality： F@z1,F@z2,F,F@z3 。
+  
+  表示租户 tenant1 在 `z1,z2,z3` 上各存在一个全能型副本 。
 
 * tenant2 的 Locality： F@z1 。
+  
+  表示租户 tenant2 在 `z1` 上存在一个全能型副本 。
