--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
@@ -8,11 +8,11 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
 
 租户副本数增加
 
-对集群中的某个租户，增加租户下 Partition 的副本数，一次只能增加一个。例如，租户从 3 副本变为 5 副本，需要将 Locality 由 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 F@z1,F@z2,F@z3,F@z4 变更为 F@z1,F@z2,F@z3,F@z4,F@z5 。
+对集群中的某个租户，增加租户下 Partition 的副本数，一次只能增加一个。例如，租户从 3 副本变为 5 副本，需要将 Locality 由 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z3,F@z4,F@z5` 。
 
 租户副本数减少
 
-对集群内的某个租户减少其中 Partition 的副本数，一次只能减少一个。例如，租户从 5 副本变为 3 副本，需要将 Locality 由 `F@z1,F@z2,F@z3,F@z4,F@z5`  变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 F@z1,F@z2,F@z3,F@z4 变更为 F@z1,F@z2,F@z3  。
+对集群内的某个租户减少其中 Partition 的副本数，一次只能减少一个。例如，租户从 5 副本变为 3 副本，需要将 Locality 由 `F@z1,F@z2,F@z3,F@z4,F@z5`  变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z3` 。
 
 租户副本迁移
 
@@ -34,7 +34,7 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
 
 * Locality 变更一次只能执行一个动作，例如把 Zone3 替换为 Zone4 ，不能直接替换，可以先增加一个 Zone4，然后再减少一个 Zone3。
 
-* 通过修改 Locality 可能会导致租户 Locality 与 租户 Primary Zone 不匹配，需要确认是否需要主动修改 Primary Zone 。
+* 通过增加副本会导致租户 Locality 与 租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
 
 ## 操作步骤
 
@@ -56,7 +56,7 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
 3. 查看 Locality 变更任务的执行状态。
 
    ```sql
-    obclient>select * from oceanbase.DBA_OB_TENANT_JOBS where JOB_TYPE = 'ALTER_TENANT_LOCALITY';
+    obclient>SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY';
     +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
     | JOB_ID | JOB_TYPE              | JOB_STATUS | RESULT_CODE | PROGRESS | START_TIME                 | MODIFY_TIME                | TENANT_ID | SQL_TEXT                                                                     | EXTRA_INFO                                  | RS_SVR_IP      | RS_SVR_PORT |
     +--------+-----------------------+------------+-------------+----------+----------------------------+----------------------------+-----------+------------------------------------------------------------------------------+---------------------------------------------+----------------+-------------+
