--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
@@ -15,13 +15,13 @@
 2. 进入 oceanbase 数据库。
 
    ```sql
-   obclient>use oceanbase;
+   obclient>USE oceanbase;
    ```
 
 3. 查询 `oceanbase.DBA_OB_TENANTS` ，获取租户的副本类型及分布。
 
    ```sql
-   obclient> select TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY from DBA_OB_TENANTS;
+   obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
    +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
    | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE                           | LOCALITY                                                         |
    +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
@@ -34,4 +34,11 @@
    5 rows in set
    ```
 
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>此处 LOCALITY 为 <code>FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2</code> 仅为示例 ，实际操作中注意添加的 zone 的数量需要能够满足多数派原则。</p>
+   </main>
+
 `DBA_OB_TENANTS` 表的 LOCALITY 字段表示租户的副本类型及分布，Locality 用于描述一个租户的副本包含哪些类型，以及它们在集群中的 Zone 分布情况。
+
+以租户 mq_t1 为例，其 `LOCALITY = 'FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2'` 表示在 `sa128_obv4_1,sa128_obv4_2` 各存在一个全能型副本。
